[tool.poetry]
name = "rigorous"
version = "0.2.0"
description = "A framework for working with inference rule systems."
authors = [
    "Maximilian Köhl <mail@koehlma.de>"
]
readme = "README.md"
homepage = "https://github.com/koehlma/rigorous"
repository = "https://github.com/koehlma/rigorous"
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
typed_ast = "^1.4.1"
click = { version = "^7.0", optional = true }
colorama = { version = "^0.4.3", optional = true }
immutables = "^0.14"
mxu = "^0.0.6"
stopit = "^1.1.2"

[tool.poetry.dev-dependencies]
black = { version = "^19.10b0", allow-prereleases = true }
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.2"
pep8-naming = "^0.9.1"
mypy = "^0.790"
pytest = "^5.4.1"
poetry = "^1.0.10"

[tool.poetry.extras]
cli = ["click", "colorama"]

[tool.poetry.scripts]
rigorous-arithmetic = "rigorous.semantics.arithmetic.__main__:main"
rigorous-ccs = "rigorous.semantics.ccs.__main__:main"
rigorous-python = "rigorous.semantics.python.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = ".*guth.*"